--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8897
-crossorigin.url=https://gasprice-ui.herokuapp.com/
+crossorigin.url=https://gasprice-ui.herokuapp.com
 spring.data.mongodb.uri=mongodb+srv://gaspricedbuser:gaspricedbuser@cluster0.doq9p.mongodb.net/GASPRICEDB?retryWrites=true	
 
