--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8897
+server.port=8103
 crossorigin.url=https://gasprice-ui.herokuapp.com
+#crossorigin.url=http://localhost:3000
 spring.data.mongodb.uri=mongodb+srv://gaspricedbuser:gaspricedbuser@cluster0.doq9p.mongodb.net/GASPRICEDB?retryWrites=true	
 
